--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="bahh">
             <i class="fa-regular fa-lightbulb large"></i>
-            <h2>Electronic Technology</h2>
+            <h2>Electronic technology</h2>
             <p>Electronic technology is the application of
                 cientific understanding of electricity to
                  do work and perform tasks. We think of electronic 
